Add some explanatory comments

--- a/example.html
+++ b/example.html
@@ -14,6 +14,16 @@
 </head>
 <body>
 
+    <!--
+    Run the tornado server (server.py) and look at http://localhost:8888
+
+    Useful URLs:
+
+    * https://github.com/ajaxorg/ace-builds/ - where this example started from
+    * http://ajaxorg.github.com/ace-builds/kitchen-sink.html - their big example
+    * http://api.jquery.com/jQuery.ajax/ - using jQuery for Ajax
+    -->
+
 <div id="editor">
 def foo(items):
     x = "All this is syntax highlighted: '%s'"%item
