--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     -->
 
 <div id="editor">{{ document }}</div>
+<div id="completions" style="margin-left: 40px; margin-top: 20px">
+    <ul id="completion-list"></ul>
+</div>
 
 <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -41,6 +44,11 @@
         console.log("CTRL-SPACE PRESSED");
         $.post("/completions", {}, function(response){
             console.log("COMPLETIONS: " + response.completions);
+            $("#completion-list").html("");
+            $.each(response.completions, function(i, completion) {
+               var li = $("<li/>").text(completion);
+               $("#completion-list").append(li);
+            });
         }, "json");
         return false;
     });
